Parser.peg
start 
  = additive 

additive 
  = left:multiplicative "+" right:additive { return left + right; }
  / left:multiplicative "-" right:additive { return left - right; } 
  / multiplicative 

multiplicative 
  = left:primary "*" right:multiplicative { return left * right; } 
  / left:primary "/" right:multiplicative { if (right !== 0) {return left / right;} else {return undefined;} }
  / left:primary "%" right:multiplicative { if (right !== 0) {return left % right;} else {return undefined;} }
  / primary 

primary 
  = integer 
  / "(" additive:additive ")" { return additive; } 

integer "integer" 
  = digits:[0-9]+ { return parseInt(digits.join(""), 10); }
  
/* There will be more soon! */
